add some user test data for development.

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -25,18 +25,25 @@
 <div class="person-info">
     <div class="profile"></div>
     <div class="achieve">
-        <%@cups = Cup.all%>
+        <%
+            user_id = session["user_id"]
+            user = User.find user_id
+            if @cups = user.cups       
+        %>
         <h3>共获得<span class="count"><%=@cups.size%></span>枚勋章</h3>
         <br />
         <div class="achieve-detail">
-            <%
-            
-            @cups.each do |cup|
-            %>
-            <div class="cup">
-            	<%= image_tag(cup.image,:title=>cup.desc,:size => "80x80")%>
-            </div>
-            <% end -%>
+                <%
+                
+                @cups.each do |cup|
+                %>
+                <div class="cup">
+                	<%= image_tag(cup.image,:title=>cup.desc,:size => "80x80")%>
+                </div>
+                <% end -%>
+        <% else -%>
+                <b>完成课程你也可以获得勋章哦，快来试试吧</b>
+        <% end -%>
         </div>
     </div>
 </div>
