--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>gk23 | 功课23天</title>
+        <title>codergate | 功课23天</title>
 
 
         <style>
