--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,35 +1,10 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @user.name %>
-</p>
-
-<p>
-  <b>Mail:</b>
-  <%= @user.mail %>
-</p>
-
-<p>
-  <b>Uid:</b>
-  <%= @user.uid %>
-</p>
-
-<p>
-  <b>Cups:</b>
-  <%= @user.cups %>
-</p>
-
-<p>
-  <b>Exercise num:</b>
-  <%= @user.exercise_num %>
-</p>
-
-<p>
-  <b>Lesson num:</b>
-  <%= @user.lesson_num %>
-</p>
-
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<div>
+目前完成课程：
+</div>
+<div>
+	分析，建议，图表展示
+</div>
+<div>
+	如果没有添加课程，则显示添加按钮
+</div>
