add regiter page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
                         <%=link_to "登录","logon/login.html"%>
                     </li>
                     <li>
-                        <a href="#">注册</a>
+                        <%=link_to "退出",:controller=>:sessions,:action=>:destroy %>
                     </li>
                 </ul>
             </div>
