add function for creating courses.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
             <div id="head-nav">
                 <ul>
                     <li>
+                        <a href="/create" style="width:100px;">创建课程</a>
+                    </li>
+                    <li>
                         <a href="../courses" style="width:100px;">所有课程</a>
                     </li>
                     <li>
