--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,6 +1,21 @@
-<h1>Editing course</h1>
+<!--
+    管理界面，只有自己创建的课程才能修改
+-->
+<h1><%= @course.name%></h1>
+<p><%= @course.desc%></p>
+<div class="lessons">
+    <% if @lessons.size==0 %>
+        <span>请添加课程章节：</span><%= link_to '添加章节',:controller=>:lessons,:action=>:new %>
+    <%else %>
+    <ul >
+        <% @lessons.each do |lesson| %> 
+        <li class="lesson">
+            <h3><a href='../lessons/<%=lesson.id%>'  /><%=lesson.name%></a></h3>
+            <%=lesson.desc%>
+        </li>
+        <% end %>
+    </ul>
+    <%end%>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @course %> |
-<%= link_to 'Back', courses_path %>
+<%= link_to '预览', @course %> 
