--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,7 +14,9 @@
                 <% 
                     progress = UserCourseShip.find_progress(session[:user_id],course.id)
                     course_status = "添加"
-                    if progress==1
+                    if progress ==nil
+                         course_status = "添加"
+                    elsif progress==1
                         course_status = "已完成"
                     elsif progress>0 and progress<1
                         course_status = "已添加"
