--- a/app/views/layouts/lesson_layout.html.erb
+++ b/app/views/layouts/lesson_layout.html.erb
@@ -15,16 +15,16 @@
             <div id="head-nav">
                 <ul>
                     <li>
-                        <a href="../courses">所有课程</a>
+                        <a href="/create" style="width:100px;">创建课程</a>
                     </li>
                     <li>
-                        <a href="#">查看进展</a>
+                        <a href="/courses" style="width:100px;">所有课程</a>
                     </li>
                     <li>
-                        <%=link_to "登录","logon/login.html"%>
+                        <a href="/" ><%=session[:user_name]%></a>
                     </li>
                     <li>
-                        <a href="#">注册</a>
+                        <%=link_to "退出",{:controller=>:sessions,:action=>:destroy},{:method=>:delete} %>
                     </li>
                 </ul>
             </div>
