--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,7 +105,6 @@ ul {
     margin-bottom: 60px;
 }
 .sidebar{
-    border: 1px solid blue;
     margin: 16px 0px ;
     /* 设置最小高度，兼容各浏览器 */
     height:auto !important;
@@ -121,16 +120,16 @@ ul {
     height:auto !important;
     height:200px;
     min-height:200px;
-
-    border:1px solid blue;
+    border-radius: 5px;
+    -moz-box-shadow:0px 0px 5px #aaa;
+    -webkit-box-shadow:0px 0px 5px #aaa;
+    box-shadow:0px 0px 5px #aaa;
     margin: 16px 0px ;
     float: right;
 }
-.nav-title{
-    background-color: green;
-}
+
 ul{
-    padding: 0 0 0px 20px ;
+    padding: 0 0 0px 5px ;
 }
 #foot {
     clear: both;
@@ -199,14 +198,29 @@ a:hover {
 /**
  *     右边侧栏显示个人信息部分
  */
-.person-info{
-    float:left;
-    width:25%;
-}
+
 .cup{
 	float: left;
 	margin: 6px;
 }
+.nav-title,.profile{
+    border-bottom: solid 1px #CCCCCC;
+    color:#000;
+    font: bold;
+}
+.sidebar-nav{
+    clear:left;
+}
+.sidebar-nav,.person-info{
+    margin-bottom: 40px;
+    background-color:#EFEFEF;
+    border-radius: 5px;
+    -moz-box-shadow:2px 2px 2px #CCCCCC;
+    -webkit-box-shadow:2px 2px 2px #CCCCCC;
+    box-shadow:2px 2px 2px #CCCCCC;
+    min-height: 80px;
+}
+
 .lesson{
 	padding-bottom:10px;
     border-top:1px solid #e5e5e5;
