ui for the button of creating course.

--- a/app/views/courses/create_list.html.erb
+++ b/app/views/courses/create_list.html.erb
@@ -1,7 +1,7 @@
 <div class="courses">
     <div>
-        <h1>我创建的课程列表<span class="count"><%=@courses.size%></span></h1>
-        <a href="courses/new" class="" style="float:right">创建新课程</a>
+        <h1 class="course_title">我创建的课程列表<span class="count"><%=@courses.size%></span></h1>
+        <a href="courses/new" class="button light_green add_course"> 创建新课程</a>
     </div>
     <ul >
         <%
