--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -244,4 +244,48 @@ a:hover {
 	 margin: 0 auto;
 	 width:600px;
  }
+
+ /**
+  *  courses/create_list.html.erb
+  */
+  .course_title{
+
+    display: inline;
+  }
+.button{
+    color: white;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+ 
+    /*text-decoration: underline;*/
+    cursor:auto;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: bold;
+    text-align: center;
+    padding: 0.5em 0.75em 0.5em;
+    font-size: 14px;
+    text-decoration: none;
+    letter-spacing: -0.02em;
+    line-height: 1em;
+    display: inline-block;
+    border: solid 1px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -webkit-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2),0 0 0 transparent;
+    -moz-box-shadow: 0px 1px 0px rgba(0,0,0,0.2),0 0 0 rgba(0,0,0,0);
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2),0 0 0 transparent;
+}
+.light_green{
+    background: -moz-linear-gradient(top, #8FC600 0%, #629300 100%);
+    background: -webkit-linear-gradient(top, #8FC600 0%, #629300 100%);
+    background: -o-linear-gradient(top, #8FC600 0%, #629300 100%);
+    background: -ms-linear-gradient(top, #8FC600 0%, #629300 100%);
+    background: linear-gradient(top, #8FC600 0%, #629300 100%);
+}
+.button.light_green{
+    border-color: #558000;
+}
+.add_course{
+    float:right;
+}
  
