--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,7 +63,13 @@ ul {
     list-style: none;
     padding:0;
 }
+ul{
+    padding: 0 0 0px 5px ;
+}
 
+li.course{
+    clear: both;
+}
 #head-nav ul {
 	list-style:none;
     color: #FFF;
@@ -126,11 +132,10 @@ ul {
     box-shadow:0px 0px 5px #aaa;
     margin: 16px 0px ;
     float: right;
+    padding: 5px;
 }
 
-ul{
-    padding: 0 0 0px 5px ;
-}
+
 #foot {
     clear: both;
     position: relative;
@@ -184,12 +189,19 @@ a:hover {
 .status{
     float:right;
 }
+/*
 .courses,.lessons{
     float:left;
     width:65%;
     margin:20px;
     padding-right:20px;
     border-right:1px dotted #e5e5e5;
+}
+*/
+.course-info{
+    float:left;
+}
+.lesson-stat{
 }
 .course{
     padding-bottom:10px;
@@ -219,6 +231,7 @@ a:hover {
     -webkit-box-shadow:2px 2px 2px #CCCCCC;
     box-shadow:2px 2px 2px #CCCCCC;
     min-height: 80px;
+    padding:5px;
 }
 
 .lesson{
